css/home.css
/* ... */
.caption p{
	text-align: left;
}

.workpage-work-section{
	padding: 0 15px !important;
	margin: 60px 0 10px 0!important;
	display: inline-block;
}

.workpage-work-section div{
	float: left;
}

.work-spacer{
	display: none !important;
}

.nav-box-small{
	width: 110px;
	height: 223px;
}

.nav-box-small a:first-child{
	margin-top: -7px;
}

.nav-box-small hr{
	float: right;
	width: 50px;
	margin: 30px 0;
}



/*Media Queries*/


@media (max-width: 991px){

	.nav-box-small{
		display: none;
	}

	.middle-content{
		padding-top: 60px;
	}

	.middle-content h2{
		top: -35px;
		width: 250px;
		margin: 0 auto;
	}

	.workpage-work-section div{
		float: none;
		display: inline-block;
		padding: 0 10px;
	}

	.caption{
		width: 65%;
	}
}

@media (max-width: 767px){

	.caption{
		width: 75%;
	}

	.work-spacer{
		display: inline-block !important;
		opacity: 0;
	}

	.workpage-work-section div a img{
		padding: 10px 0;
	}
	.workpage-work-section div{
		padding: 0 10px;
	}

}

@media (max-width: 550px){

	.col-xs-3{
		width: 43% !important;
	}

	.middle-content h2{
		right: -45px;
		text-align: right;
	}

	.flickity-page-dots{
		bottom: -45px !important;
	}

	.middle-content img{
		padding: 5px;
	}

	.gallery{
		padding-top: 30px;
	}

	.caption{
		margin: 75px auto 0;
	}

}

@media (max-width: 327px){

	.border-top div{
		text-align: right;
		padding-right: 2px;
		margin-top: -17px;
	}

	.border-top a{
		display: block;
		margin-top: 4px;
		font-size: 10px;
	}
}

